src/tui/snapshots/chess__tui__panels__tests__exchange_120x40_stale.snap
---
source: src/tui/panels.rs
expression: h.terminal.backend()
---
"┌ Jev exchange ─────────────────────────────────────────────────────────────────────────────────────────── 15-50 of 50 ┐"
"│ exchange 1 of 2 · move 1 · e5 · Jev · HTTP 200 · 2 attempts · 1234 ms · stale — not played                           │"
"│                                                                                                                      │"
"│         "e4": {                                                                                                      │"
"│           "assessment": "good",                                                                                      │"
"│           "effect": "opens the bishop's diagonal"                                                                    │"
"│         }                                                                                                            │"
"│       },                                                                                                             │"
"│       "type": "choice"                                                                                               │"
"│     }                                                                                                                │"
"│   },                                                                                                                 │"
"│   "state": {                                                                                                         │"
"│     "note": "a quiet opening position",                                                                              │"
"│     "side_to_move": "white"                                                                                          │"
"│   }                                                                                                                  │"
"│ }                                                                                                                    │"
"│                                                                                                                      │"
"│ RESPONSE 1 · HTTP 503 · 120 ms                                                                                       │"
"│ error: HTTP 503: busy \u{1b}[2J now                                                                                  │"
"│ busy \u{1b}[2J now                                                                                                   │"
"│ \ttry again                                                                                                          │"
"│                                                                                                                      │"
"│ RESPONSE 2 · HTTP 200 · 850 ms                                                                                       │"
"│ {                                                                                                                    │"
"│   "answers": {                                                                                                       │"
"│     "move": {                                                                                                        │"
"│       "choice": "e4",                                                                                                │"
"│       "confidence": 0.81,                                                                                            │"
"│       "probabilities": {                                                                                             │"
"│         "d4": 0.3,                                                                                                   │"
"│         "e4": 0.62                                                                                                   │"
"│       }                                                                                                              │"
"│     }                                                                                                                │"
"│   },                                                                                                                 │"
"│   "model": "jev-test",                                                                                               │"
"│   "usage": {                                                                                                         │"
"│     "input_tokens": 512                                                                                              │"
"│   }                                                                                                                  │"
"│ }                                                                                                                    │"
"└ ↑↓ PgUp PgDn Home End · ←→ older/newer · Esc closes ─────────────────────────────────────────────────────────────────┘"
