src/tui/snapshots/chess__tui__panels__tests__game_over_80x24.snap
---
source: src/tui/panels.rs
expression: h.terminal.backend()
---
"┌ Board ────────────────────────────────────┐┌ Status ───────── Human vs Human ┐"
"│                                           ││ Checkmate — Black wins (0-1)    │"
"│ 8  ♜    ♞    ♝         ♚    ♝    ♞    ♜   ││                                 │"
"│                                           ││                                 │"
"│ 7  ♟︎    ♟︎    ♟︎    ♟︎         ♟︎    ♟︎    ♟︎   ││                                 │"
"│                                           │├ Moves ──────────────────────────┤"
"│ 6                                         ││ 1. f3   e5                      │"
"│                                           ││ 2. g4   Qh4#                    │"
"│ 5              ┌ Game over ─────────────────────────────────┐                │"
"│                │           Checkmate — Black wins           │                │"
"│ 4              │                 Result 0-1                 │                │"
"│                │                                            │                │"
"│ 3              │    [ New game ]  [ Save PGN ]  [ Menu ]    │                │"
"│                │        Esc: see the board   u: undo        │                │"
"│ 2  ♟︎    ♟︎    ♟︎ └────────────────────────────────────────────┘                │"
"│                                           ││                                 │"
"│ 1  ♜    ♞    ♝    ♛    ♚    ♝    ♞    ♜   ││                                 │"
"│                                           ││                                 │"
"│    a    b    c    d    e    f    g    h   ││                                 │"
"│                                           ││                                 │"
"└───────────────────────────────────────────┘├ Captured ───────────────────────┤"
"┌ Command ──────────────────────────────────┐│ White                           │"
"│ / move  : command  ? help                 ││ Black                           │"
"└───────────────────────────────────────────┘└─────────────────────────────────┘"
