src/tui/snapshots/chess__tui__panels__tests__jev_reply_80x24.snap
---
source: src/tui/panels.rs
expression: h.terminal.backend()
---
"┌ Board ────────────────────────────────────┐┌ Status ───── You (White) vs Jev ┐"
"│                                           ││ White to move (you)             │"
"│ 8  ♜    ♞    ♝    ♛    ♚    ♝    ♞    ♜   ││                                 │"
"│                                           ││                                 │"
"│ 7  ♟︎    ♟︎         ♟︎    ♟︎    ♟︎    ♟︎    ♟︎   ││                                 │"
"│                                           │├ Jev ────────────────────────────┤"
"│ 6                                         ││ played c5 · Jev                 │"
"│                                           ││ c5 62%  e5 21%  d5 9%           │"
"│ 5            ♟︎                            ││ conf 0.81 · 1234 ms · jev-test  │"
"│                                           │├ Moves ──────────────────────────┤"
"│ 4                      ♟︎                  ││ 1. e4   c5                      │"
"│                                           ││                                 │"
"│ 3                                         ││                                 │"
"│                                           ││                                 │"
"│ 2  ♟︎    ♟︎    ♟︎    ♟︎         ♟︎    ♟︎    ♟︎   ││                                 │"
"│                                           ││                                 │"
"│ 1  ♜    ♞    ♝    ♛    ♚    ♝    ♞    ♜   ││                                 │"
"│                                           ││                                 │"
"│    a    b    c    d    e    f    g    h   ││                                 │"
"│                                           ││                                 │"
"└───────────────────────────────────────────┘├ Captured ───────────────────────┤"
"┌ Command ──────────────────────────────────┐│ White                           │"
"│ / move  : command  ? help                 ││ Black                           │"
"└───────────────────────────────────────────┘└─────────────────────────────────┘"
