src/tui/snapshots/chess__tui__panels__tests__jev_vetoed_80x24.snap
---
source: src/tui/panels.rs
expression: h.terminal.backend()
---
"┌ Board ────────────────────────────────────┐┌ Status ───── You (White) vs Jev ┐"
"│                                           ││ White to move (you)             │"
"│ 8  ♜    ♞    ♝    ♛    ♚    ♝         ♜   ││                                 │"
"│                                           ││                                 │"
"│ 7  ♟︎    ♟︎    ♟︎    ♟︎    ♟︎    ♟︎    ♟︎    ♟︎   ││                                 │"
"│                                           │├ Jev ────────────────────────────┤"
"│ 6                           ♞             ││ played Nf6 · vetoed             │"
"│                                           ││ Qh4 62%  Nf6 21%  d5 9%         │"
"│ 5                                         ││ conf 0.81 · 12345 ms            │"
"│                                           ││ jev-latest                      │"
"│ 4                      ♟︎                  ││ Jev picked Qh4, which the search│"
"│                                           ││ rates much worse; played Nf6    │"
"│ 3                                         │├ Moves ──────────────────────────┤"
"│                                           ││ 1. e4 Nf6                       │"
"│ 2  ♟︎    ♟︎    ♟︎    ♟︎         ♟︎    ♟︎    ♟︎   ││                                 │"
"│                                           ││                                 │"
"│ 1  ♜    ♞    ♝    ♛    ♚    ♝    ♞    ♜   ││                                 │"
"│                                           ││                                 │"
"│    a    b    c    d    e    f    g    h   ││                                 │"
"│                                           ││                                 │"
"└───────────────────────────────────────────┘├ Captured ───────────────────────┤"
"┌ Command ──────────────────────────────────┐│ White                           │"
"│ / move  : command  ? help                 ││ Black                           │"
"└───────────────────────────────────────────┘└─────────────────────────────────┘"
