src/tui/snapshots/chess__tui__panels__tests__jev_vs_jev_60x20.snap
---
source: src/tui/panels.rs
expression: h.terminal.backend()
---
"┌ Board ────────────────────┐┌ Status ───────── Jev vs Jev ┐"
"│                           ││ Black to move (Jev)         │"
"│                           ││ paused · space resumes      │"
"│                           ││                             │"
"│ 8 ♜  ♞  ♝  ♛  ♚  ♝  ♞  ♜  ││                             │"
"│ 7 ♟︎  ♟︎  ♟︎  ♟︎  ♟︎  ♟︎  ♟︎  ♟︎  │├ Jev ────────────────────────┤"
"│ 6                         ││ played e4 · Jev             │"
"│ 5                         ││ e4 62%  e5 21%  d5 9%       │"
"│ 4             ♟︎           ││ conf 0.81 · 1234 ms         │"
"│ 3                         ││ jev-test                    │"
"│ 2 ♟︎  ♟︎  ♟︎  ♟︎     ♟︎  ♟︎  ♟︎  │├ Moves ──────────────────────┤"
"│ 1 ♜  ♞  ♝  ♛  ♚  ♝  ♞  ♜  ││ 1. e4                       │"
"│   a  b  c  d  e  f  g  h  ││                             │"
"│                           ││                             │"
"│                           ││                             │"
"│                           ││                             │"
"└───────────────────────────┘├ Captured ───────────────────┤"
"┌ Command ──────────────────┐│ White                       │"
"│ / move  : command  ? help ││ Black                       │"
"└───────────────────────────┘└─────────────────────────────┘"
