src/tui/snapshots/chess__tui__panels__tests__jev_vs_jev_debug_60x20.snap
---
source: src/tui/panels.rs
expression: h.terminal.backend()
---
"┌ Board ────────────────────┐┌ Status ───────── Jev vs Jev ┐"
"│                           ││ DEBUG White to move (Jev)   │"
"│                           ││ step 1.0 s · space pauses   │"
"│                           ││ | Jev thinking... 0.0s      │"
"│ 8 ♜  ♞  ♝  ♛  ♚  ♝  ♞  ♜  ││                             │"
"│ 7 ♟︎  ♟︎  ♟︎  ♟︎  ♟︎  ♟︎  ♟︎  ♟︎  │├ Jev ────────────────────────┤"
"│ 6                         ││ Jev ready (jev-test)        │"
"│ 5                         ││ no move yet                 │"
"│ 4                         ││                             │"
"│ 3                         │├ Moves ──────────────────────┤"
"│ 2 ♟︎  ♟︎  ♟︎  ♟︎  ♟︎  ♟︎  ♟︎  ♟︎  ││ no moves yet                │"
"│ 1 ♜  ♞  ♝  ♛  ♚  ♝  ♞  ♜  ││                             │"
"│   a  b  c  d  e  f  g  h  ││                             │"
"│                           ││                             │"
"│                           ││                             │"
"│                           ││                             │"
"└───────────────────────────┘├ Captured ───────────────────┤"
"┌ Command ──────────────────┐│ White                       │"
"│ / move  : command  ? help ││ Black                       │"
"└───────────────────────────┘└─────────────────────────────┘"
