src/tui/snapshots/chess__tui__panels__tests__local_vs_local_80x24.snap
---
source: src/tui/panels.rs
expression: h.terminal.backend()
---
"┌ Board ────────────────────────────────────┐┌ Status ───────── Local vs Local ┐"
"│                                           ││ White to move (Local search)    │"
"│ 8  ♜    ♞    ♝    ♛    ♚    ♝    ♞    ♜   ││ step 1.0 s · space pauses       │"
"│                                           ││ | Local search thinking... 0.0s │"
"│ 7  ♟︎    ♟︎    ♟︎    ♟︎    ♟︎    ♟︎    ♟︎    ♟︎   ││                                 │"
"│                                           ││                                 │"
"│ 6                                         │├ Local search ───────────────────┤"
"│                                           ││ No JEV_API_KEY — local search   │"
"│ 5                                         ││ no move yet                     │"
"│                                           ││                                 │"
"│ 4                                         │├ Moves ──────────────────────────┤"
"│                                           ││ no moves yet                    │"
"│ 3                                         ││                                 │"
"│                                           ││                                 │"
"│ 2  ♟︎    ♟︎    ♟︎    ♟︎    ♟︎    ♟︎    ♟︎    ♟︎   ││                                 │"
"│                                           ││                                 │"
"│ 1  ♜    ♞    ♝    ♛    ♚    ♝    ♞    ♜   ││                                 │"
"│                                           ││                                 │"
"│    a    b    c    d    e    f    g    h   ││                                 │"
"│                                           ││                                 │"
"└───────────────────────────────────────────┘├ Captured ───────────────────────┤"
"┌ Command ──────────────────────────────────┐│ White                           │"
"│ / move  : command  ? help                 ││ Black                           │"
"└───────────────────────────────────────────┘└─────────────────────────────────┘"
