src/tui/snapshots/chess__tui__panels__tests__menu_80x24.snap
---
source: src/tui/panels.rs
expression: h.terminal.backend()
---
"          ┌ rchess ──────────────────────────────────────────────────┐          "
"          │  New game · Computer:  Jev   Laya                        │          "
"          │  > 1. Human vs Human                                     │          "
"          │    2. Human vs Jev (off): play White                     │          "
"          │    3. Human vs Jev (off): play Black                     │          "
"          │    4. Human vs Jev (off): random side                    │          "
"          │    5. Jev (off) vs Jev (off) (watch)                     │          "
"          │    6. Laya (off) vs Laya (off) (watch)                   │          "
"          │    7. Jev (off) (White) vs Laya (off) (watch)            │          "
"          │    8. Laya (off) (White) vs Jev (off) (watch)            │          "
"          │    9. Load FEN                                           │          "
"          │       Quit                                               │          "
"          │                                                          │          "
"          │  Two players take turns at this keyboard.                │          "
"          │                                                          │          "
"          │  No JEV_API_KEY — local search                           │          "
"          │  No LAYA_URL — local search                              │          "
"          │  ! JEV_TIMEOUT_MS is not a number; using 20000           │          "
"          │  ! --glyphs: unknown glyph set "fancy" (expected image,  │          "
"          │    solid, outline or ascii); using solid                 │          "
"          │                                                          │          "
"          │  jk choose · Tab computer · 1-9 start · q quit           │          "
"          └──────────────────────────────────────────────────────────┘          "
"                                                                                "
